Bug 149409 - Small Caps toolbar button invalidly grayed out
Summary: Small Caps toolbar button invalidly grayed out
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.2.3.2 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: ImpressDraw-Toolbars
  Show dependency treegraph
 
Reported: 2022-05-31 20:01 UTC by Eyal Rozenberg
Modified: 2025-01-30 06:43 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eyal Rozenberg 2022-05-31 20:01:31 UTC
When I choose the "Small Capitals" button to be visible on the Text Formatting toolbar, it becomes visible, but - it's grayed out. There should be no reason for it to be grayed out, especially since I use a font with Small Caps forms (Liberation Sans).

Build info:

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: d9b33ed6644203141fdb0776c291425c2bc9f5ac
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-IL (en_IL); UI: en-US

May or may not be related to the fact the Small Caps doesn't work properly in Impress:

https://bugs.documentfoundation.org/show_bug.cgi?id=147732

... but at least, if you turn it on in the Font Effects dialog, it does _something_ (i.e. ALL-CAPSing). With the toolbar button you can't do nothing.
Comment 1 Eyal Rozenberg 2022-05-31 20:03:06 UTC
I should mention that, in LO Writer, the toolbar button is not grayed out and works fine.
Comment 2 LeroyG 2022-05-31 21:55:43 UTC
Reproducible with:

Version: 7.2.3.2 / LibreOffice Community
Build ID: 20(Build:2)
CPU threads: 1; OS: Linux 5.3; UI render: default; VCL: gtk3
Locale: es-MX (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 3 raal 2022-06-11 05:21:53 UTC
Confirm Version: 7.4.0.0.alpha1+ / LibreOffice Community
Build ID: d4123356c61db269651e950a0a2cc93e6d801c90
CPU threads: 4; OS: Linux 5.13; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo

Small capitals is also greyed out in menu Format > Text > Small capitals

@Caolán, is it related to bug 91932?
Comment 4 Caolán McNamara 2023-09-26 10:06:50 UTC
With https://bugs.documentfoundation.org/show_bug.cgi?id=98367 now (hopefully) fixed this should be possible to do now

See: https://cgit.freedesktop.org/libreoffice/core/commit/?id=d378cd2f766eeb1fd1c98f62c9ae6b5b59fd00f1 for the original writer implementation and grep for SID_SET_SUB_SCRIPT to see a similar case to model this on
Comment 5 Commit Notification 2024-01-28 19:02:12 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f7ca5ce78f98505cd301f6bddde143e3ecb846e7

Resolves: tdf#149409 enable impress 'Small Capitals' Toolbar Button

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2024-01-28 19:03:41 UTC
Seems to work for me now with that.
Comment 7 Eyal Rozenberg 2024-01-28 20:29:12 UTC
(In reply to Commit Notification from comment #5)

Code replication is fun :-)

Is it like this with most toolbar buttons available across the LO modules?

Anyway, thanks for the fix, I'll try it in a day or two with a nightly.
Comment 8 BogdanB 2024-01-29 07:35:20 UTC
Eyal and Caolan, thanks.

Bad in 24.2 (for comparison reason)
Version: 24.2.0.2 (X86_64) / LibreOffice Community
Build ID: b1fd3a6f0759c6f806568e15c957f97194bbec8f
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Active in
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c249e910992d5da840989a1f2bea9da1c6d0fcbb
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded