Resolves: tdf#149409 enable impress 'Small Capitals' Toolbar Button

Change-Id: Ifc8721f50f359669af501c91bc86d6a983785f9f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162663
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>